<resources>
    <string name="app_name">Android Demo App</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="friends">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="civ_transition">circleImageTransition</string>
    <string name="profile_social_likes">Likes</string>
    <string name="profile_social_metrics">-</string>
    <string name="profile_social_posts">Posts</string>
    <string name="profile_social_shares">Shares</string>
    <string name="profile_social_friends">Friends</string>
    <string name="profile_years">26 years old</string>
    <string name="profile_email">rzknairb@gmail.com</string>
    <string name="profile_location">Trujillo, Peru</string>
    <string name="profile_occupation">Developer</string>
    <string name="feed_username">Dave</string>
    <string name="feed_description">Quia et suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum</string>
    <string name="feed_item_like">16</string>
    <string name="feed_item_comment">Comment</string>
    <string name="title_comment_list">Items</string>
    <string name="title_comment_detail">Comment Detail</string>
    <string name="comment_item_example">Great! Good Job bro</string>
    <string name="enter_message">Enter message</string>
    <string name="input_empty">Input is empty</string>

    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="friend_item_fullname">Brian Rodriguez</string>
    <string name="promp_profile_content">Opten la información de tu perfil de manera rápida y fácil</string>
    <string name="promp_profile_title">Perfil</string>
    <string name="promp_feed_title">Publicaciones</string>
    <string name="promp_feed_content">Opten la información de tu perfil de forma fácil y rápida</string>
    <string name="promp_friend_title">Amigos </string>
    <string name="promp_friend_content">Opten la lista de tus amigos, puedes revisa su perfil, llamarlo por teléfono o enviarle un mail!</string>
    <string name="callingFiend">Call Friend</string>
    <string name="sendMessage">Send  message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_social_app">Social App</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
