<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/friends"
        app:showAsAction="ifRoom" />
</menu>